[project]
name = "certbot-dns-local"
version = "1.0.0"
description = "Domain registrar agnostic authenticator plugin for certbot"
readme = "README.md"
license = { text = "Apache License 2.0" }
authors = [
  { name = "B. Blechschmidt", email = "git@blechschmidt.io" }
]
urls = { Homepage = "https://github.com/blechschmidt/certbot-dns-local" }

requires-python = ">=2.7"
dependencies = [
  "dnspython",
  "zope.interface",
]

classifiers = [
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Intended Audience :: System Administrators",
  "Topic :: Internet :: Name Service (DNS)",
  "Topic :: Security :: Cryptography",
  "Environment :: Plugins",
  "Operating System :: POSIX :: Linux"
]


[project.optional-dependencies]
# These extras can be installed via:
#   pip install certbot-dns-local[netfilter]
netfilter = [
  "NetfilterQueue",
  "python-iptables",
  "scapy"
]


[project.entry-points."certbot.plugins"]
"dns-local" = "certbot_dns_local.auth:CertbotDNSAuthenticator"
